--- a/style.css
+++ b/style.css
@@ -423,6 +423,7 @@
   }
 
   .about-section {
+    margin-top: 22px;
     text-align: center;
   }
 
@@ -771,6 +772,7 @@
   .about-section {
     align-items: center;
     text-align: center;
+    margin-top: 22px;
   }
   .about-title {
     font-size: 36px;
