--- a/style.css
+++ b/style.css
@@ -19,18 +19,28 @@
     0 8px 8px hsl(0deg 0% 0% / 0.075), 0 16px 16px hsl(0deg 0% 0% / 0.075);
   --subtle-box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
   --crimson-text: "Crimson Text", serif;
+  --dark-green: #023f28;
 }
 
 body {
   font-family: var(--sub-font);
-  background: #dbd8e3;
+  background: #e8f4f7;
   color: #2a2438;
+}
+
+.bold {
+  font-weight: 700;
+  color: #d30c7d;
+}
+
+.gray {
+  color: #979991;
 }
 
 /*-----------------------------------------------------------------BOOTSTRAP NAVBAR HEADER*/
 .navbar {
   padding: 20px;
-  background-color: rgb(255, 255, 255, 0.75);
+  background-color: rgb(232, 235, 218, 0.75);
 }
 
 .navbar-light .navbar-toggler {
@@ -59,18 +69,37 @@ body {
 }
 
 .nav-link {
-  color: var(--sub-text-color) !important;
+  color: black !important;
   margin-left: 20px;
+  position: relative;
 }
 
-.navbar-toggler {
-  margin-right: 100px;
+.nav-link::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2.5px;
+  background: currentColor;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 250ms ease-in;
 }
 
-.navbar-nav .nav-link:hover {
+.nav-link:hover::after {
+  transform: scaleX(1);
+  transform-origin: left;
+}
+
+/* .navbar-nav .nav-link:hover {
   color: white !important;
   background-color: rgba(94, 101, 109, 0.85) !important;
   transition: 600ms !important;
+} */
+
+.navbar-toggler {
+  margin-right: 100px;
 }
 
 .sr-only {
@@ -87,9 +116,22 @@ body {
   letter-spacing: 1px;
 }
 
+@keyframes slide-up {
+  from {
+    opacity: 0;
+    line-height: 120px;
+  }
+
+  to {
+    opacity: 1;
+    line-height: 22px;
+  }
+}
+
 .hero-title {
-  font-size: 3rem;
-  font-weight: 500;
+  font-family: var(--crimson-text);
+  font-size: 5rem;
+  font-weight: 600;
   padding-bottom: 22px;
 }
 
@@ -98,7 +140,11 @@ body {
 }
 
 .hero-paragraph {
+  font-family: var(--crimson-text);
   font-size: 2rem;
+  letter-spacing: 0;
+  line-height: 22px;
+  animation: slide-up 3s;
 }
 
 .home-img-july {
@@ -151,7 +197,7 @@ body {
 .about-title {
   font-family: var(--crimson-text);
   font-weight: bold;
-  font-size: 50px;
+  font-size: 3rem;
   margin-left: 18px;
 }
 
@@ -167,14 +213,27 @@ body {
   display: block;
 }
 .about-paragraph {
-  font-size: 16px;
-  color: var(--sub-text-color);
+  font-family: var(--crimson-text);
+  font-size: 1.5rem;
+  color: var(--dark-green);
   margin-left: 18px;
 }
 
 .about-paragraph-two {
+  font-size: 1.2rem;
   margin-bottom: 80px;
   margin-left: 18px;
+}
+
+.about-link {
+  text-decoration: none;
+  color: #d30c7d;
+}
+
+.about-link:hover {
+  transition: 600ms;
+  color: #e8f4f7;
+  background-color: #d30c7d;
 }
 
 .all-buttons {
