--- a/style.css
+++ b/style.css
@@ -39,7 +39,9 @@ body {
 
 /*-----------------------------------------------------------------BOOTSTRAP NAVBAR HEADER*/
 .navbar {
-  padding: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 0 !important;
   background-color: rgb(232, 235, 218, 0.75);
 }
 
@@ -62,7 +64,6 @@ body {
 
 .navbar-nav {
   margin-left: auto;
-
   margin-right: 50px;
   font-size: 15px;
   align-items: center;
@@ -72,6 +73,9 @@ body {
   color: black !important;
   margin-left: 20px;
   position: relative;
+  padding-bottom: 2px !important;
+  padding-left: 0 !important;
+  padding-right: 0 !important;
 }
 
 .nav-link::after {
@@ -80,7 +84,7 @@ body {
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 2.5px;
+  height: 2px;
   background: currentColor;
   transform: scaleX(0);
   transform-origin: right;
@@ -187,6 +191,7 @@ body {
 /*-------------------------------------------------------------------------------ABOUT ME*/
 .about-me-all {
   margin-top: 60px;
+  padding-bottom: 160px;
 }
 
 .about-header {
@@ -198,7 +203,7 @@ body {
   font-family: var(--crimson-text);
   font-weight: bold;
   font-size: 3rem;
-  margin-left: 18px;
+  /* margin-left: 18px; */
 }
 
 .bio-pic {
@@ -292,6 +297,59 @@ body {
   width: 30px;
 }
 
+/* -----------------------------------------------------------------PORTFOLIO UPDATE */
+.portfolio-all {
+  margin-top: 60px;
+  margin-bottom: 160px;
+}
+
+.portfolio-each-project {
+  margin-bottom: 80px;
+}
+
+.portfolio-img-update {
+  width: 600px;
+}
+
+.portfolio-img-update-mobile {
+  width: 400px;
+}
+
+.portfolio-button {
+  text-transform: uppercase;
+  color: #d30c7d;
+  text-decoration: none;
+  position: relative;
+  cursor: pointer;
+}
+
+.portfolio-button:hover {
+  color: #d30c7d;
+}
+
+.portfolio-button::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2.5px;
+  background: currentColor;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 250ms ease-in;
+}
+
+.portfolio-button:hover::after {
+  transform: scaleX(1);
+  transform-origin: left;
+
+  color: #d30c7d;
+}
+
+.right-button {
+  margin-left: 15px;
+}
 /*---------------------------------------------------------------------------------HOME */
 
 .home-all {
